<resources>
    <string name="app_name">Project</string>
    <string name="events_application">EVENTS APPLICATION</string>
    <string name="events">Events</string>
    <string name="places">Places</string>
    <string name="accomodation">Accommodation</string>
    <string name="guided_tours">Guided Tours</string>
    <string name="switch_to_english_spanish">Switch to English / Spanish</string>
    <string name="about_the_app">About the App</string>
    <string name="event_image">Event Image</string>
    <string name="event_title">Event Title</string>
    <string name="event_date">Event Date</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="placeTitle">Place Title</string>
    <string name="placeRate">Place Rate</string>
    <string name="accommodationTitle">Accommodation Title</string>
    <string name="accommodationRate">Accommodation Rate</string>
    <string name="eventDescription">Event Description</string>
    <string name="images">Images</string>
    <string name="video">Video</string>
    <string name="placeDescription">Accommodation Descrition</string>
    <string name="readtext">Read text</string>
    <string name="accommodationDescription">Accommodation Description</string>
    <string name="percentage" translatable="false">64%</string>
    <string name="percentageText">64% of our customers left good reviews after they visited this app</string>
    <string name="percentage2" translatable="false">60%</string>
    <string name="percentageText2">60% of out customer keep the application installed on their phones</string>
    <string name="reviews">Reviews</string>
    <string name="r1">The description of the place was accurated, I could go back to this place</string>
    <string name="randomuser">Polish customer</string>
    <string name="r2">The images of the place was accurated, I could go back to this place</string>
    <string name="randomuser2">Estonian customer</string>
    <string name="r3">The description of the site was accurated, I could go back to this place</string>
    <string name="randomuser3">Czek customer</string>
    <string name="verified">Verified</string>
</resources>