<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/accommodationTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6sp"
        android:text="@string/event_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/accommodationDescriptionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accommodationDescription"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/accommodaitonDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6sp"
        android:text="@string/eventDescription"
        android:textAlignment="viewStart" />

    <RatingBar
        android:id="@+id/accommodationEvaluation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/accommodationRate"
        android:max="10"
        android:numStars="10"
        android:stepSize="1" />


    <WebView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginBottom="6sp" >

    </WebView>

    <TextView
        android:id="@+id/imagesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6sp"
        android:text="@string/images"
        android:textAlignment="viewStart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/eventDetailImage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6sp"
            android:contentDescription="@string/event_image"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/eventDetailImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6sp"
            android:layout_marginEnd="6sp"
            android:contentDescription="@string/event_image"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/eventDetailImage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6sp"
            android:contentDescription="@string/event_image"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>

</LinearLayout>