<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6sp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/accommodationTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6sp"
                android:text="@string/event_title"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accommodationDescriptionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeDescription"
                android:textAlignment="viewStart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/accommodaitonDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6sp"
                    android:layout_weight="1"
                    android:text="@string/placeDescription"
                    android:textAlignment="viewStart" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="setReadtext"
                    android:text="@string/readtext" />
            </LinearLayout>

            <RatingBar
                android:id="@+id/accommodationEvaluation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/accommodationRate"
                android:max="10"
                android:numStars="10"
                android:stepSize="1" />

            <WebView
                android:id="@+id/mapview"
                android:layout_width="match_parent"
                android:layout_height="420dp"
                android:layout_marginBottom="6sp" />

            <TextView
                android:id="@+id/imagesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6sp"
                android:text="@string/images"
                android:textAlignment="viewStart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/eventDetailImage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6sp"
                    android:contentDescription="@string/event_image"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/eventDetailImage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6sp"
                    android:layout_marginEnd="6sp"
                    android:contentDescription="@string/event_image"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/eventDetailImage3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6sp"
                    android:contentDescription="@string/event_image"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />

            </LinearLayout>

            <TextView
                android:id="@+id/videoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6sp"
                android:text="@string/video"
                android:textAlignment="viewStart" />

            <WebView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </WebView>

            <TextView
                android:id="@+id/Reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:text="@string/reviews"
                android:textAlignment="viewStart" />


            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:clickable="false"
                android:focusable="true"
                app:cardBackgroundColor="#545454"
                android:layout_marginBottom="6sp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/review"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2sp"
                        android:layout_marginTop="6sp"
                        android:text="@string/randomuser"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/review1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2sp"
                    android:text="@string/r1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:text="@string/verified" />
                    </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:clickable="false"
                android:focusable="true"
                app:cardBackgroundColor="#545454"
                android:layout_marginBottom="6sp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/review4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2sp"
                        android:layout_marginTop="6sp"
                        android:text="@string/randomuser2"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/review2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2sp"
                        android:text="@string/r2"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"/>
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:text="@string/verified"/>
                   </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:clickable="false"
                android:focusable="true"
                app:cardBackgroundColor="#545454">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/review10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2sp"
                        android:layout_marginTop="6sp"
                        android:text="@string/randomuser3"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/review12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2sp"
                        android:text="@string/r3"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"/>
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:text="@string/verified"/>
                   </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>