<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AboutUs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:onClick="gotoPlaces"
    android:orientation="vertical"
    tools:context="com.example.project.MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/events_application"
        android:textAlignment="center"
        android:textColor="#4C5352"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="6sp"
        android:layout_marginBottom="20sp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_events"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2sp"
            android:layout_weight="1"
            android:backgroundTint="#4C5352"
            android:onClick="gotoEvents"
            android:text="@string/events"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_places"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_weight="1"
            android:backgroundTint="#4C5352"
            android:onClick="gotoPlaces"
            android:text="@string/places"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="6sp"
        android:layout_marginBottom="20sp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_accomodation"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2sp"
            android:layout_weight="1"
            android:backgroundTint="#4C5352"
            android:onClick="gotoAccommodations"
            android:text="@string/accomodation"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_guidedtours"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_weight="1"
            android:backgroundTint="#4C5352"
            android:onClick="gotoRoutes"
            android:text="@string/guided_tours"
            android:textColor="#FFFFFF"
            app:iconTint="#FFFFFF" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="6sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="6sp"
        android:layout_marginBottom="20sp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/Progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:progress="64"
            android:progressTint="#4C5352"
            android:visibility="visible"
            app:indicatorColor="#4C5352"
            app:indicatorInset="0dp"
            app:indicatorSize="100dp"
            tools:layout_conversion_absoluteHeight="100dp"
            tools:layout_conversion_absoluteWidth="100dp"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="331dp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignStart="@+id/Progress"
            android:layout_alignTop="@id/Progress"
            android:layout_alignEnd="@+id/Progress"
            android:layout_alignBottom="@id/Progress"
            android:gravity="center_vertical"
            android:text="@string/percentage"
            android:textAlignment="center"
            android:textColor="#4C5352"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="399dp"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="431dp" />

        <TextView
            android:id="@+id/percentageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Progress"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:onClick="switchLanguage"
            android:text="@string/percentageText"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="6sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="6sp"
        android:layout_marginBottom="20sp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/Progress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:progress="60"
            android:progressTint="#4C5352"
            android:visibility="visible"
            app:indicatorColor="#4C5352"
            app:indicatorInset="0dp"
            app:indicatorSize="100dp"
            tools:layout_conversion_absoluteHeight="100dp"
            tools:layout_conversion_absoluteWidth="100dp"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="331dp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignStart="@+id/Progress2"
            android:layout_alignTop="@id/Progress2"
            android:layout_alignEnd="@+id/Progress2"
            android:layout_alignBottom="@id/Progress2"
            android:gravity="center_vertical"
            android:text="@string/percentage2"
            android:textAlignment="center"
            android:textColor="#4C5352"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="399dp"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="431dp" />

        <TextView
            android:id="@+id/percentageText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Progress2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:onClick="switchLanguage"
            android:text="@string/percentageText2"
            android:textAlignment="center"
            android:textSize="20sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6sp"
        android:layout_marginEnd="6sp"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_switchlanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="switchLanguage"
            android:text="@string/switch_to_english_spanish"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/button_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setMessage"
            android:text="@string/about_the_app"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>