<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventDescription"
        android:textAlignment="viewStart" />

    <WebView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="420dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/eventDetailImage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/event_image"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/eventDetailImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/event_image"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/eventDetailImage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/event_image"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>

</LinearLayout>